backport translations feature from 2100 (WIP)